--- a/mklivecd/src/mklivecd.in
+++ b/mklivecd/src/mklivecd.in
@@ -22,7 +22,7 @@
 #
 # Adapted from the MiniCD (http://www.linuxminicd.org) and mkinitrd build scripts
 #
-# $Id: mklivecd.in,v 1.163 2006/07/31 04:17:36 ikerekes Exp $
+# $Id: mklivecd.in,v 1.164 2006/10/20 03:25:33 ikerekes Exp $
 #
 
 use strict;
@@ -732,12 +732,12 @@ sub create_compressed {
 		do_cmd(":>$workdir/excludes.list", ++$pos);
 		if (defined($opts{nodir})) {
 			my $ex = join("\n", @{$opts{nodir}});
-			do_cmd("(find $o_root -mount -type d 2>/dev/null | sed -e 's,^$o_root,/,g' | grep '$ex' | sed 's,^/,$o_root,' >>$workdir/excludes.list)", ++$pos);
+			do_cmd("(find $o_root -type d 2>/dev/null | sed -e 's,^$o_root,/,g' | grep '$ex' | sed 's,^/,$o_root,' >>$workdir/excludes.list)", ++$pos);
 
 		}
 		if (defined($opts{nofile})) {
 			my $ex = join("\n", @{$opts{nofile}});
-			do_cmd("(find $o_root -mount -type f 2>/dev/null | sed -e 's,^$o_root,/,g' | grep '$ex' | sed 's,^/,$o_root,' >>$workdir/excludes.list)", ++$pos);
+			do_cmd("(find $o_root -type f 2>/dev/null | sed -e 's,^$o_root,/,g' | grep '$ex' | sed 's,^/,$o_root,' >>$workdir/excludes.list)", ++$pos);
 		}
 
 		# handle sort
@@ -748,7 +748,7 @@ sub create_compressed {
 		$pos = 0;
 		my $size = $blocksize*1024;
 		if ($o_looptype =~ m/sqfs/) {
-			my @files = qx(find $o_root -mount -type f 2>/dev/null);
+			my @files = qx(find $o_root -type f 2>/dev/null);
 			my $total = scalar(@files);
 			start_progress("Creating compressed image", $total+2);
 			my $iso = "$loopcmp $o_root $workdir/livecd/livecd.$o_looptype -info -ef $workdir/excludes.list";
