--- a/mklivecd/src/rc.sysinit.in
+++ b/mklivecd/src/rc.sysinit.in
@@ -21,7 +21,7 @@
 #
 # The latest version of this script can be found at http://livecd.berlios.de
 #
-# $Id: rc.sysinit.in,v 1.64 2006/06/27 04:20:35 ikerekes Exp $
+# $Id: rc.sysinit.in,v 1.65 2008/04/12 09:31:05 ikerekes Exp $
 #
 
 export PATH=/initrd/bin:/initrd/sbin:/initrd/usr/bin:/initrd/usr/sbin:/bin:/sbin:/usr/bin:/usr/sbin
@@ -32,24 +32,21 @@ MNTCDROM=/initrd/cdrom
 MNTLIVECD=/initrd/loopfs
 KERNELVER=`uname -r`
 MNTRAMDISK=/ramfs
-KERNEL26=1
-MODEXT=".ko"
+hostname=
+HWDETECT=
+nodetect=
 
 ### progress indicator
 progress_num=0
-progress_full=@VAL_SPLASH_FULL@
+progress_full=20
 progress_max=32768
-progress_on=1
 
 ### screen colors
 RES_COL=65
 MOVE_TO_COL="echo -en \\033[${RES_COL}G\\033[K"
 SETCOLOR_OK="echo -en \\033[1;32m"
 SETCOLOR_FAIL="echo -en \\033[1;31m"
-SETCOLOR_WARN="echo -en \\033[1;33m"
 SETCOLOR_NORMAL="echo -en \\033[0;39m"
-SETCOLOR_CLEAR="echo -en \\033c"
-SETCOLOR_CEOL="echo -en \\033[0G\\033[K"
 
 #common (library) functions
 
@@ -74,19 +71,6 @@ printloaded() {
         echo "]"
         return 0
 }
-
-
-### print a warning msg
-printwarn() {
-        $MOVE_TO_COL
-        echo -n "[ "
-        $SETCOLOR_WARN
-        echo -n "WARN"
-        $SETCOLOR_NORMAL
-        echo " ]"
-        return 0
-}
-
 
 ### print a failure msg
 printfail() {
@@ -129,43 +113,23 @@ docmd() {
         (eval "$CMD") 2>&1 >/dev/null && printok || printfail
 }
 
-
-### load a module
-loadmod() {
-        MODULE="/lib/modules/$KERNELVER/kernel/$1$MODEXT"
-        [ ! -f $MODULE ] && MODULE="/initrd$MODULE"
-        [ ! -f $MODULE ] && return 1
-        if [ -n "$DEBUG" ]; then
-                RET=0
-                echo -n "$MODULE: "
-                insmod $MODULE $2 && RET=0 || RET=1
-                echo "($RET)"
-                return $RET
-        else
-                (insmod $MODULE $2 2>&1)>/dev/null && return 0 || return 1
-        fi
-}
-
-
 ### set progress bar
 set_progress() {
-        silent=`grep -i splash=silent /proc/cmdline`
-        if [ -e /proc/splash ] && [ -n "$silent" ] && [ -n "$progress_on" ]; then
+        if [ -e /proc/splash ] && [ -n "$silent" ]; then
                 progress_num=$(($progress_num+1));
                 progress=$(($progress_max*($progress_num+1)/$progress_full));
                 echo "show $progress" >/proc/splash
         fi
 }
 
-dbg()
-{
-    	  if [ -n "$DEBUG" ]; then
-       	echo
-       	$SETCOLOR_FAIL
-       	echo -e "DBG: ${@}"
-       	$SETCOLOR_NORMAL
-       	echo
-    	  fi
+dbg() {
+    	if [ -n "$DEBUG" ]; then
+       		echo
+       		$SETCOLOR_FAIL
+       		echo -e "DBG: ${@}"
+       		$SETCOLOR_NORMAL
+       		echo
+	fi
 }
 
 ### this is if we are to execute a limited shell
@@ -192,7 +156,7 @@ execshell() {
                         SHELL="/bin/ash"
                 else
                         echo "  Loading /bin/busybox ash"
-                        SHELL="/bin/busybox ash"
+                        SHELL="/bin/busybox ash && <dev/tty >dev/console 2>&1"
                 fi
         fi
         exec $SHELL
@@ -205,27 +169,6 @@ mountit(){
         	test -b $1 && mount -t $fs $3 $1 $2 >/dev/null 2>&1 && return 0
     	  done
     	  return 1
-}
-
-### function to get the value of an option from the kernel command line
-getbootoption() {
-	option="$1"
-	val=`$MNTLIVECD/bin/sed -r -e "s/(.*)${option}=([[:alnum:]-]*)(.*)/\2/i" /proc/cmdline`
-	if [ -n "$val" -a "$val" != "`$MNTLIVECD/bin/cat /proc/cmdline`" ]; then
-		echo $val
-		return 0
-	else
-		return 1
-	fi
-}
-
-### function to check for an option from the kernel command line
-checkbootoption() {
-	if [ `grep -iq $1 /proc/cmdline` ]; then
-		return 0
-	else
-		return 1
-	fi
 }
 
 #--------------------------------------------------------------------#
@@ -259,8 +202,6 @@ setupdir_etc() {
 
 	rm -f /etc/mtab && touch /etc/mtab
 	rm -rf /etc/modules.conf && touch /etc/modules.conf
-#	rm -rf /etc/rc.d/rc3.d/S05harddrake
-#	rm -rf /etc/rc.d/rc5.d/S05harddrake
 
 	printok
 	set_progress
@@ -368,7 +309,9 @@ setupdir_var() {
 	mkdir -p /var/log && touch /var/log/wtmp && touch /var/log/messages
 	mkdir -p /var/run && touch /var/run/utmp
 	rm -rf /var/tmp && ln -sf /tmp /var/tmp
-
+        rm -fr /modules
+        rm -fr /initrd/modules
+        rm -fr /initrd/lib
 	printok
 	set_progress
 }
@@ -380,7 +323,7 @@ setuproot() {
 		d=${d#$MNTLIVECD/}
 		if [ -d $MNTLIVECD/$d ]; then
 			case $d in
-				dev|proc|sys|mnt|tmp|udev|initrd)	# Remain in RAM
+				dev|proc|sys|media|mnt|tmp|udev|initrd|var/run|var/lock|home/gusest/tmp|changes)	# Remain in RAM
 					;;
 				etc)
 					setupdir_etc
@@ -416,15 +359,14 @@ setuproot() {
 ### setup for init of the actual mdk image
 setupinit() {
 	echo "6" >/proc/sys/kernel/printk
-        # perform hwdetect if not disabled
-	OPTION=`getbootoption hwdetect`
+	# perform hwdetect if not disabled
 	if [ ! -d $CHANGES/etc ]; then
-	    if [ "$OPTION" = "no" ] || [ "`grep nodetect /proc/cmdline`" ]; then
+	    if [ "$HWDETECT" = "no" ] || [ -n "$nodetect" ]; then
 		SKIP="yes"
 	    fi
 	else
-	    if [ "$OPTION" = "yes" ]; then
-		SKIP="no"
+	    if [ "$HWDETECT" = "yes" ]; then
+				SKIP="no"
 	    else
                 SKIP="yes"
 	    fi
@@ -447,7 +389,7 @@ setupinit() {
 	/bin/sed -i -e 's/action.*depmod/true/g' /etc/rc.d/rc.sysinit
 
 	# Do various other configuration tasks (now that /etc is available)
-	if hostname=`getbootoption hostname`; then
+	if [ -z "$hostname" ]; then
 		/bin/sed -i.livecd -e "s/\(\S*HOSTNAME=\).*/\1${hostname}/g" /etc/sysconfig/network
 		for i in /etc/sysconfig/network-scripts/ifcfg-eth*; do
 			/bin/sed -i.livecd -e "s/\(\S*DHCP_HOSTNAME=\).*/\1${hostname}/g" $i
@@ -462,8 +404,7 @@ setupinit() {
 	cp -f /sbin/halt /sbin/reboot /initrd/sbin
 
 	# restart the splash before MDK init (this is very hacky)
-	silent=`/bin/grep -i splash=silent /proc/cmdline`
-	if [ $progress_max -eq 65534 ] && [ -e /proc/splash ] && [ -n "$silent" ] && [ -n "$progress_on" ]; then
+	if [ $progress_max -eq 65534 ] && [ -e /proc/splash ] && [ -n "$silent" ]; then
 		echo 0 > /proc/splash
 		. /etc/sysconfig/bootsplash
 		res=`/bin/fbresolution`
@@ -499,33 +440,48 @@ setupinit() {
 }
 
 do_union () {
-	echo "Setting up UNIONFS"
-	UNIONMOD=unionfs.ko
-	cp `find /initrd/loopfs/lib/modules/$KERNELVER/kernel -name $UNIONMOD* ` /
-	# unzip if zipped
-	if [ -e /$UNIONMOD.gz ]; then
-		gunzip /$UNIONMOD.gz
-	fi
-	insmod /$UNIONMOD
-	if [ $? != "0" ]; then
-		printfatal "Failed to load unionfs module."
-	fi
-	rm /$UNIONMOD # Don't waste memory
+	echo -e "\nSetting up union file system\n"
+
 	mkdir /union
 	mkdir /initrd/changes
-	CHANGES=/changes
-	CHANGESDEV=$(cat  /proc/cmdline|awk 'BEGIN {OFS="\n"} {$1=$1; print}'|awk '/changes/ {print}'|awk -F"=" '{print $2}')
-	if [ -n "$CHANGESDEV" ]; then
-		if mountit  $CHANGESDEV /initrd/changes; then
+	CHANGES=/changes  #Defaults to the /changes directory in memory
+
+	dbg "The CHANGES_DEV is $CHANGES_DEV, the CHANGES_FILE is $CHANGES_FILE \n"
+
+   	if [ -n "$CHANGES_FILE" ]; then #The changes= describes a loop mounted persistent changes
+		mkdir -p /part1
+		if [ -z "$CHANGES_DEV" ]; then #empty $CHANGES_DEV means try the boot media
+			IMAGEDIR="/initrd/cdrom/"
+			LOOPIMG2=$IMAGEDIR$CHANGES_FILE
+		else
+			/initrd/loopfs/bin/mount -t auto $CHANGES_DEV /part1 && LOOPFOUND=1
+			IMAGEDIR=/part1
+		fi
+		losetup /dev/loop3 $IMAGEDIR$CHANGES_FILE
+		if mountit /dev/loop3 /initrd/changes; then
 			CHANGES=/initrd/changes/changes
 		else
-			echo "Failed to mount $CHANGESDEV changes partition"
+			echo "ERROR: Unable to mount $CHANGES_FILE"
+			umount /part1
+		fi	
+	else 
+		if [ -n "$CHANGES_DEV" ]; then
+			/initrd/loopfs/bin/mount -t auto $CHANGES_DEV /initrd/changes
+			dbg "`mount`"
+			type=$(mount|grep changes|awk '/ext2|ext3|reiserfs|xfs/ {print $5}')
+			if [ -n "$type"  ]; then #the $CHANGES_FILE is empty but the chnages_dev is a Linux partition
+				CHANGES=/initrd/changes/changes
+			else
+          			echo "ERROR: The $CHANGES_DEV has to be a Linux file system"
+	   			umount /initrd/changes
+			fi
 		fi
 	fi
-	dbg "The CHANGESDEV is $CHANGESDEV, the CHANGES is $CHANGES \n"
+
+	dbg "The CHANGESDEV is $CHANGES_DEV, the CHANGES is $CHANGES \n"
 	mkdir $CHANGES
 
-	mount -t unionfs -o dirs=$CHANGES=rw:/initrd/loopfs=ro unionfs /union
+	mount -t aufs -o dirs=$CHANGES=rw:/initrd/loopfs=ro none /union
 
 	export PATH=/bin:/sbin:/usr/bin:/usr/sbin:$PATH
 	echo "6" > /proc/sys/kernel/printk # enable kernel messages
@@ -535,7 +491,7 @@ do_union () {
 		d=${d#$MNTLIVECD/}
 		if [ -d $MNTLIVECD/$d ]; then
 			case $d in
-				dev|proc|sys|mnt|tmp|udev|initrd|changes)  	# Remain in RAM
+				dev|proc|sys|media|mnt|tmp|udev|initrd|var/run|var/lock|home/gusest/tmp|changes)  	# Remain in RAM
 			;;
 				*)					# Any extra/custom dirs
 				rm -f $d && ln -s /union/$d /$d		# Replace link
@@ -548,9 +504,11 @@ do_union () {
 
 	## fix /var/tmp
 	rm -f /var/tmp; ln -s /tmp /var/tmp
+	rm -fr /modules
+	rm -fr /initrd/modules
+	rm -fr /initrd/lib
 
 	return 0
-
 ## Testing section
 echo "Starting a shell for testing purposes."
 echo -n "Enter '"
@@ -560,25 +518,40 @@ $SETCOLOR_NORMAL
 echo -n "' to continue booting."
 execshell
 ### End of testing section
+
 }
 
 ###### MAIN ######
 echo "--- MKLIVECD RC.SYSINIT ------------"
+# parameter parsing
+for x in $(cat /proc/cmdline); do
+	case $x in
+		debug) DEBUG=y; ;;
+        	md5sum) domd5=y; ;;
+        	splash=silent) silent=y; ;;
+        	initrd) initrd=y; ;;
+		nodetect) nodetect=y; ;;
+        	unionfs=*) UNIONFS="{x#unionfs=}"; ;;
+        	hwdetect=*) HWDETECT="{x#hwdetect=}"; ;;
+        	hostname=*) hostname="{x#hostname=}"; ;;
+        	changes_dev=*) CHANGES_DEV="${x#changes_dev=}"; ;;
+        	changes_file=*) CHANGES_FILE="${x#changes_file=}"; ;;
+	esac
+done
 
-# establish /sys (ignored during mklivecd)
-mkdir /sys ; chmod 755 /sys
 
-OPTION=`getbootoption unionfs`
-if [ "$OPTION" = "no" ]; then
-	echo "Unionfs option = $OPTION"
+if [ "$UNIONFS" = "no" ]; then
+	echo "Unionfs option = $UNIONFS"
 	setuproot ""
 else
 	do_union ""
 fi
+
 setupinit ""
+
 echo "--- Exiting MKLIVECD RC.SYSINIT ----"
+
 # Comment out the line that invokes rc.sysinit instead of deleting it
-# grep -v "^si" /etc/inittab >/inittab;mv /inittab /etc/inittab
 cat /etc/inittab | sed -e /^si/'s/si/# si/' >/inittab;mv /inittab /etc/inittab
 exec /etc/rc.d/rc.sysinit <dev/console >dev/console 2>&1
 exit 0
